--- a/app/src/main/res/drawable/button_focus_background.xml
+++ b/app/src/main/res/drawable/button_focus_background.xml
@@ -3,7 +3,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/faste_red" />
+        android:color="@color/unlock_bg" />
 
 
     <corners android:radius="8dp" />
