--- a/app/src/main/res/layout/short_video_playback_control_view.xml
+++ b/app/src/main/res/layout/short_video_playback_control_view.xml
@@ -15,7 +15,10 @@
         android:id="@+id/centerButtonLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="15dp"
         android:orientation="horizontal">
 
 
@@ -24,7 +27,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginRight="15dp"
             android:src="@drawable/ic_vol_mute" />
 
         <ImageView
@@ -32,7 +34,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginRight="15dp"
             android:src="@drawable/ic_vol_unmute" />
 
 
