--- a/app/src/main/res/layout/short_video_playback_control_view.xml
+++ b/app/src/main/res/layout/short_video_playback_control_view.xml
@@ -17,8 +17,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="15dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginBottom="25dp"
         android:orientation="horizontal">
 
 
@@ -27,6 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:visibility="gone"
             android:src="@drawable/ic_vol_mute" />
 
         <ImageView
