--- a/app/src/main/res/layout/short_video_player_layout.xml
+++ b/app/src/main/res/layout/short_video_player_layout.xml
@@ -10,6 +10,7 @@
         android:id="@+id/videoPlayer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/black"
         app:controller_layout_id="@layout/short_video_playback_control_view"
         app:resize_mode="fill" />
 
