--- a/app/src/main/res/layout/short_video_playback_control_view.xml
+++ b/app/src/main/res/layout/short_video_playback_control_view.xml
@@ -15,8 +15,7 @@
         android:id="@+id/centerButtonLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
+        android:layout_centerInParent="true"
         android:layout_marginRight="25dp"
         android:layout_marginBottom="25dp"
         android:orientation="horizontal">
