--- a/app/src/main/res/layout/short_video_player_layout.xml
+++ b/app/src/main/res/layout/short_video_player_layout.xml
@@ -11,6 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/black"
+        android:clickable="true"
+        android:focusable="true"
         app:controller_layout_id="@layout/short_video_playback_control_view"
         app:resize_mode="fill" />
 
