--- a/app/src/main/res/layout/short_video_player_layout.xml
+++ b/app/src/main/res/layout/short_video_player_layout.xml
@@ -13,8 +13,52 @@
         android:background="@color/black"
         android:clickable="true"
         android:focusable="true"
-        app:controller_layout_id="@layout/short_video_playback_control_view"
         app:resize_mode="fill" />
+
+
+    <RelativeLayout
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="right"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp">
+
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:alpha=".4"
+            android:background="#CC212121" />
+
+        <LinearLayout
+            android:id="@+id/centerButtonLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginRight="25dp"
+            android:layout_marginBottom="25dp"
+            android:orientation="horizontal">
+
+
+            <ImageView
+                android:id="@+id/unmute"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_vol_mute"
+                android:visibility="gone" />
+
+            <ImageView
+                android:id="@+id/mute"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_vol_unmute" />
+
+
+        </LinearLayout>
+
+
+    </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/errorRetryLayout"
@@ -56,9 +100,6 @@
             android:indeterminateTintMode="src_atop" />
 
     </LinearLayout>
-
-
-
 
 
 </FrameLayout>
