--- a/app/src/main/res/layout/short_video_player_layout.xml
+++ b/app/src/main/res/layout/short_video_player_layout.xml
@@ -21,6 +21,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="right"
+        android:visibility="gone"
         android:layout_marginRight="5dp"
         android:layout_marginTop="5dp">
 
