--- a/app/src/main/res/layout/exo_playback_control_view.xml
+++ b/app/src/main/res/layout/exo_playback_control_view.xml
@@ -194,7 +194,8 @@
             <ImageView
                 android:id="@+id/previewImageView"
                 android:layout_width="120dp"
-                android:layout_height="70dp" />
+                android:layout_height="70dp"
+                android:scaleType="fitXY"/>
 
         </FrameLayout>
 
