--- a/app/src/main/res/drawable/video_frame.xml
+++ b/app/src/main/res/drawable/video_frame.xml
@@ -4,7 +4,7 @@
 
     <stroke
         android:width="@dimen/video_frame_width"
-        android:color="@android:color/white" />
+        android:color="@color/faste_red" />
 
     <solid android:color="@android:color/black" />
 </shape>
