--- a/app/src/main/res/layout/balaji_exo_playback_control_view.xml
+++ b/app/src/main/res/layout/balaji_exo_playback_control_view.xml
@@ -181,7 +181,7 @@
     </LinearLayout>
 
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/videoMenuLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -196,11 +196,13 @@
 
         <LinearLayout
             android:id="@+id/volumeLayout"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -216,7 +218,7 @@
             <ProgressBar
                 android:id="@+id/volumeProgressBar"
                 style="@style/Widget.ProgressBar.Vertical"
-                android:layout_width="0dp"
+                android:layout_width="160dp"
                 android:layout_height="5dp"
                 android:progress="5"
                 android:layout_marginRight="40dp"
@@ -232,6 +234,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:gravity="center_vertical"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
             android:orientation="horizontal">
 
             <ImageView
@@ -243,6 +247,15 @@
                 android:background="@android:color/transparent"
                 android:src="@drawable/speed"
                 android:visibility="gone" />
+
+            <ImageView
+                android:id="@+id/volumeUnMuteButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginRight="10dp"
+                android:background="@android:color/transparent"
+                android:src="@drawable/ic_balaji_volume_on" />
 
 
             <ImageView
@@ -284,7 +297,7 @@
         </LinearLayout>
 
 
-    </LinearLayout>
+    </RelativeLayout>
 
 
     <LinearLayout
