--- a/app/src/main/res/layout/balaji_exo_playback_control_view.xml
+++ b/app/src/main/res/layout/balaji_exo_playback_control_view.xml
@@ -373,8 +373,7 @@
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@id/video_progress_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="bottom"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/videoMenuLayout"
         android:layout_marginLeft="5dp"
         android:orientation="vertical">
@@ -383,7 +382,10 @@
             android:id="@+id/seekBarLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom">
+            android:layout_gravity="bottom"
+            android:layoutDirection="ltr"
+            android:orientation="vertical">
+
 
             <FrameLayout
                 android:id="@+id/previewFrameLayout"
@@ -393,11 +395,11 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/video_frame"
-                app:layout_constraintBottom_toTopOf="@+id/parentLl"
                 app:layout_constraintDimensionRatio="16:9"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/exo_progress"
                 app:layout_constraintWidth_default="percent"
                 app:layout_constraintWidth_percent="0.35">
 
@@ -411,80 +413,72 @@
                     android:scaleType="fitXY" />
             </FrameLayout>
 
+            <com.github.rubensousa.previewseekbar.exoplayer.PreviewTimeBar
+                android:id="@+id/exo_progress"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toStartOf="@id/durationLinearLayout"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="@id/previewFrameLayout"
+                app:previewAnimationEnabled="true"
+                app:previewFrameLayout="@id/previewFrameLayout"
+                app:scrubber_dragged_size="24dp"
+                app:scrubber_enabled_size="16dp"
+                tools:ignore="MissingConstraints" />
+
             <androidx.appcompat.widget.LinearLayoutCompat
-               android:id="@+id/parentLl"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent">
+                android:id="@+id/durationLinearLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center|bottom"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="@id/previewFrameLayout"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:ignore="MissingConstraints">
 
-                <com.github.rubensousa.previewseekbar.exoplayer.PreviewTimeBar
-                    android:id="@+id/exo_progress"
-                    android:layout_width="0dp"
-                    android:layout_weight="0.700"
+                <TextView
+                    android:id="@id/exo_position"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"
-                    app:previewAnimationEnabled="true"
-                    app:scrubber_dragged_size="24dp"
-                    app:scrubber_enabled_size="16dp"
-                    tools:ignore="MissingConstraints" />
+                    android:layout_gravity="bottom"
+                    android:gravity="bottom"
+                    android:includeFontPadding="false"
+                    android:paddingLeft="4dp"
+                    android:paddingRight="4dp"
+                    android:textColor="#FFBEBEBE"
+                    android:textSize="12sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="@id/previewFrameLayout"
+                    tools:text="3.00" />
 
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:id="@+id/durationLinearLayout"
-                    android:layout_width="0dp"
-                    android:layout_weight="0.300"
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    tools:ignore="MissingConstraints">
-
-                    <TextView
-                        android:id="@id/exo_position"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:gravity="center_vertical"
-                        android:includeFontPadding="false"
-                        android:paddingLeft="4dp"
-                        android:paddingRight="4dp"
-                        android:textColor="#FFBEBEBE"
-                        android:textSize="12sp"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        tools:text="3.00" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:gravity="center_vertical"
-                        android:includeFontPadding="false"
-                        android:text="/"
-                        android:textColor="#FFBEBEBE"
-                        android:textSize="12sp"
-                        android:textStyle="bold" />
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_vertical"
+                    android:includeFontPadding="false"
+                    android:text="/"
+                    android:textColor="#FFBEBEBE"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
 
 
-                    <TextView
-                        android:id="@id/exo_duration"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:includeFontPadding="false"
-                        android:paddingLeft="4dp"
-                        android:paddingRight="4dp"
-                        android:textColor="#FFBEBEBE"
-                        android:textSize="12sp"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        tools:text="3.00" />
+                <TextView
+                    android:id="@id/exo_duration"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:includeFontPadding="false"
+                    android:paddingLeft="4dp"
+                    android:paddingRight="4dp"
+                    android:textColor="#FFBEBEBE"
+                    android:textSize="12sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="@id/previewFrameLayout"
+                    tools:text="3.00" />
 
-
-                </androidx.appcompat.widget.LinearLayoutCompat>
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
