--- a/app/src/main/res/layout/alt_balaji_tv_video_player.xml
+++ b/app/src/main/res/layout/alt_balaji_tv_video_player.xml
@@ -13,6 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:animation_enabled="false"
+        android:clickable="true"
+        android:focusable="true"
         app:controller_layout_id="@layout/alt_tv_player"
         app:resize_mode="fill" />
 
