--- a/app/src/main/res/layout/alt_balaji_tv_video_player.xml
+++ b/app/src/main/res/layout/alt_balaji_tv_video_player.xml
@@ -15,6 +15,7 @@
         app:animation_enabled="false"
         android:clickable="true"
         android:focusable="true"
+        android:focusableInTouchMode="true"
         app:controller_layout_id="@layout/alt_tv_player"
         app:resize_mode="fill" />
 
