--- a/app/src/main/res/layout/exo_playback_control_view.xml
+++ b/app/src/main/res/layout/exo_playback_control_view.xml
@@ -19,14 +19,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_gravity="bottom"
-    android:focusable="false"
+    android:focusable="true"
     android:layoutDirection="ltr">
 
     <View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:alpha=".6"
-        android:focusable="false"
         android:background="#CC212121"/>
 
     <ImageView
