--- a/app/src/main/res/layout/exo_playback_control_view.xml
+++ b/app/src/main/res/layout/exo_playback_control_view.xml
@@ -1,17 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
+<?xml version="1.0" encoding="utf-8"?>
 
-     Licensed under the Apache License, Version 2.0 (the "License");
-     you may not use this file except in compliance with the License.
-     You may obtain a copy of the License at
-
-          http://www.apache.org/licenses/LICENSE-2.0
-
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the License is distributed on an "AS IS" BASIS,
-     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     See the License for the specific language governing permissions and
-     limitations under the License.
--->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
@@ -25,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:alpha=".6"
+        android:focusable="false"
         android:background="#CC212121"/>
 
     <ImageView
@@ -37,6 +26,8 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:padding="5dp"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:background="?attr/selectableItemBackground"
         android:src="@mipmap/player_back_btn"/>
 
@@ -95,6 +86,8 @@
                 android:layout_height="32dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="15dp"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:background="?attr/selectableItemBackground"
                 android:src="@drawable/backward" />
 
@@ -104,6 +97,8 @@
                 android:layout_height="32dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="15dp"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:background="?attr/selectableItemBackground"
                 android:src="@drawable/play" />
 
@@ -113,6 +108,8 @@
                 android:layout_height="32dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="15dp"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:background="?attr/selectableItemBackground"
                 android:src="@drawable/pause" />
 
@@ -123,6 +120,8 @@
                 android:layout_gravity="center_vertical"
                 android:background="?attr/selectableItemBackground"
                 android:layout_marginRight="10dp"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:src="@drawable/forward" />
 
             <ImageView
@@ -131,6 +130,8 @@
                 android:layout_height="32dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="10dp"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:background="?attr/selectableItemBackground"
                 android:src="@drawable/next"
                 android:visibility="gone" />
@@ -160,6 +161,8 @@
             android:layout_gravity="center"
             android:background="?attr/selectableItemBackground"
             android:layout_marginRight="10dp"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:src="@drawable/speed" />
 
         <ImageView
@@ -169,6 +172,8 @@
             android:layout_gravity="center"
             android:background="?attr/selectableItemBackground"
             android:layout_marginRight="10dp"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:src="@drawable/menu" />
 
         <ImageView
@@ -177,6 +182,8 @@
             android:layout_height="25dp"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="10dp"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:background="@android:color/transparent"
             android:src="@drawable/picture_in_picture" />
 
@@ -186,6 +193,8 @@
             android:layout_height="20dp"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="10dp"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:background="@android:color/transparent"
             android:src="@drawable/rotate" />
 
@@ -226,6 +235,8 @@
             app:previewAnimationEnabled="true"
             android:background="?attr/selectableItemBackground"
             android:layout_marginRight="10dp"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             app:previewFrameLayout="@id/previewFrameLayout" />
 
         <!--
