--- a/app/src/main/res/layout/exo_playback_control_view.xml
+++ b/app/src/main/res/layout/exo_playback_control_view.xml
@@ -7,7 +7,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_gravity="bottom"
-    android:descendantFocusability="blocksDescendants"
     android:layoutDirection="ltr">
 
     <View
@@ -15,7 +14,6 @@
         android:layout_height="match_parent"
         android:alpha=".6"
         android:focusable="false"
-        android:descendantFocusability="blocksDescendants"
         android:background="#CC212121"/>
 
     <ImageView
@@ -29,6 +27,7 @@
         android:layout_marginEnd="16dp"
         android:padding="5dp"
         android:focusable="true"
+        android:clickable="true"
         android:focusableInTouchMode="true"
         android:background="?attr/selectableItemBackground"
         android:src="@mipmap/player_back_btn"/>
@@ -90,6 +89,7 @@
                 android:layout_marginRight="15dp"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
+                android:clickable="true"
                 android:background="?attr/selectableItemBackground"
                 android:src="@drawable/backward" />
 
@@ -100,6 +100,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="15dp"
                 android:focusable="true"
+                android:clickable="true"
                 android:focusableInTouchMode="true"
                 android:background="?attr/selectableItemBackground"
                 android:src="@drawable/play" />
@@ -112,6 +113,7 @@
                 android:layout_marginRight="15dp"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
+                android:clickable="true"
                 android:background="?attr/selectableItemBackground"
                 android:src="@drawable/pause" />
 
@@ -123,6 +125,7 @@
                 android:background="?attr/selectableItemBackground"
                 android:layout_marginRight="10dp"
                 android:focusable="true"
+                android:clickable="true"
                 android:focusableInTouchMode="true"
                 android:src="@drawable/forward" />
 
