--- a/app/src/main/res/layout/alt_tv_player.xml
+++ b/app/src/main/res/layout/alt_tv_player.xml
@@ -13,6 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:alpha=".6"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:background="#CC212121" />
 
     <RelativeLayout
@@ -23,7 +25,26 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
+
+        <Button
+            android:id="@+id/closeButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:padding="5dp"
+            android:focusable="true"
+            android:clickable="true"
+            android:focusedByDefault="true"
+            android:focusableInTouchMode="true"
+            android:text="VIKRAM SHARMA"
+            android:textSize="20sp" />
+
+
+       <!-- <ImageButton
             android:id="@+id/closeButton"
             android:layout_width="30dp"
             android:layout_height="28dp"
@@ -34,7 +55,7 @@
             android:layout_marginEnd="16dp"
             android:background="?attr/selectableItemBackground"
             android:padding="5dp"
-            android:src="@mipmap/player_back_btn" />
+            android:src="@mipmap/player_back_btn" />-->
 
 
         <TextView
