--- a/app/src/main/res/layout/exo_playback_control_view.xml
+++ b/app/src/main/res/layout/exo_playback_control_view.xml
@@ -14,6 +14,7 @@
         android:layout_height="match_parent"
         android:alpha=".6"
         android:focusable="false"
+        android:visibility="gone"
         android:background="#CC212121"/>
 
     <ImageView
